force-app/main/default/objects/Contact/fields/feature_2_Field__c.field-meta.xml
<CustomField>
    <fullName>feature_2_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>feature-2 Field</label>
    <type>Checkbox</type>
</CustomField>