force-app/main/default/objects/Contact/fields/x__c.field-meta.xml
<CustomField>
    <fullName>x__c</fullName>
    <defaultValue>false</defaultValue>
    <label>x</label>
    <type>Checkbox</type>
</CustomField>