force-app/main/default/objects/Contact/fields/xx__c.field-meta.xml
<CustomField>
    <fullName>xx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>xx</label>
    <type>Checkbox</type>
</CustomField>